src/components/Projects.css
#projects-container {
  height: 100%;
  width: 100%;
  
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#projects-content {
  text-align: center;
}

#projects-list {
  margin-top: .5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.project {
  margin: .5rem 1rem;
  width: 35%;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.project img {
  width: 100%;
  height: auto;

  margin-bottom: .5rem;
}

.project-links {
  display: flex;
  justify-content: space-around;
}

.project-links a {
  color: black;
  transition: color .3s ease;
}

.project-links a:hover {
  color: var(--blue)
}

